--- a/MeetingAssistant_NET46/MeetingAssistant_NET46/Views/Home/Index.cshtml
+++ b/MeetingAssistant_NET46/MeetingAssistant_NET46/Views/Home/Index.cshtml
@@ -233,7 +233,7 @@ a:hover{
 
 
                 <div class="form-style-8">
-                    <img src="/img128.png" />
+                    <img src="/mic128.png" />
                     <input id="meetingIsDoneBtn" type="button" value="Meeting is done"/>
                 </div>
             </div>
