--- a/MeetingAssistant_NET46/MeetingAssistant_NET46/Views/Home/Index.cshtml
+++ b/MeetingAssistant_NET46/MeetingAssistant_NET46/Views/Home/Index.cshtml
@@ -223,15 +223,13 @@ a:hover{
                     Location:<input id="location" name="location" type="text" /><br />
                     Organizer:<div id="organizerPlaceholder"></div><br />
                     <br />
-                    Participants [<a id="addParticipantBtn" href="#">Add participant</a>]<br />
+                    Participants [<a id="addParticipantBtn" href="#" style="background: transparent">Add participant</a>]<br />
                     <div id="participants"></div><br />
 
                     <input type="submit" value="Create meeting" />
                 </form>
             </div>
             <div class="back">
-
-
                 <div class="form-style-8">
                     <div style="margin: auto">
                         <img src="/mic128.png" />
