--- a/MeetingAssistant_NET46/MeetingAssistant_NET46/Views/Home/Index.cshtml
+++ b/MeetingAssistant_NET46/MeetingAssistant_NET46/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 
 <script>
-    var baseUrl = "http://mettingassistantservicetest.azurewebsites.net";
+    var baseUrl = "http://meetassistantservice.azurewebsites.net/";
     var employeeSelectHtml;
     var currentMeetingId;
 
@@ -223,7 +223,7 @@ a:hover{
                     Location:<input id="location" name="location" type="text" /><br />
                     Organizer:<div id="organizerPlaceholder"></div><br />
                     <br />
-                    Participants [<a id="addParticipantBtn" href="#" style="background: transparent">Add participant</a>]<br />
+                    Participants [<a id="addParticipantBtn" href="#" style="background: transparent; color: blue;">Add participant</a>]<br />
                     <div id="participants"></div><br />
 
                     <input type="submit" value="Create meeting" />
