--- a/MeetingAssistant_NET46/MeetingAssistant_NET46/Views/Home/Index.cshtml
+++ b/MeetingAssistant_NET46/MeetingAssistant_NET46/Views/Home/Index.cshtml
@@ -208,7 +208,7 @@ a:hover{
 
 <div id="viz">
     <canvas id="analyser" width="1024" height="500"></canvas>
-    <canvas id="wavedisplay" width="1024" height="500"></canvas>
+    <canvas id="wavedisplay" width="1024" height="500" style="display:none"></canvas>
 </div>
 
 <div class="body-container">
